Add footer links and links to the pictures in partners

--- a/ksbc/templates/about/index.html
+++ b/ksbc/templates/about/index.html
@@ -91,78 +91,6 @@
     </div>
 </section><!-- End Alt Services Section -->
 
-    <!-- <div class="row gy-4">
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="card-item">
-                <div class="row">
-                    <div class="col-xl-5">
-                        <div class="card-bg" style="background-image: url({% static 'img/about_us.jpeg' %});"></div>
-                    </div>
-                    <div class="col-xl-7 d-flex align-items-center">
-                        <div class="card-body">
-                        <h4 class="card-title">Способствовать развитию бизнеса, торговли и потоков капитала</h4>
-                        <p>Способствовать развитию бизнеса, торговли и потоков капитала между Казахстаном и Сингапуром, способствовать экономическому развитию и приграничному сотрудничеству, а также служить катализатором для создания тесных деловых связей и улучшения общего качества жизни в этих регионах; таким образом становясь мостом между этими двумя регионами.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> End Card Item -->
-
-        <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="card-item">
-                <div class="row">
-                    <div class="col-xl-5">
-                        <div class="card-bg" style="background-image: url({% static 'img/about_us.jpeg' %});"></div>
-                    </div>
-                    <div class="col-xl-7 d-flex align-items-center">
-                        <div class="card-body">
-                            <h4 class="card-title">Стремиться к совершенству и экономическому росту.</h4>
-                            <p>Стремиться к совершенству и экономическому росту в Казахстане и Сингапуре за счет сильного лидерства и партнерства с местными сообществами, выступая в качестве платформы для инновационной бизнес-среды и повышая жизнеспособность обслуживаемых сообществ.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> End Card Item -->
-
-        <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-item">
-                <div class="row">
-                    <div class="col-xl-5">
-                        <div class="card-bg" style="background-image: url({% static 'img/about_us.jpeg' %});"></div>
-                    </div>
-                    <div class="col-xl-7 d-flex align-items-center">
-                        <div class="card-body">
-                            <h4 class="card-title">Error beatae dolor inventore aut</h4>
-                            <p>Dicta porro nobis. Velit cum in. Nesciunt dignissimos enim molestiae facilis numquam quae quaerat
-                                ipsam omnis. Neque debitis ipsum at architecto officia laboriosam odit. Ut sunt temporibus nulla
-                                culpa.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> End Card Item -->
-
-        <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="card-item">
-                <div class="row">
-                    <div class="col-xl-5">
-                        <div class="card-bg" style="background-image: url({% static 'img/about_us.jpeg' %});"></div>
-                    </div>
-                    <div class="col-xl-7 d-flex align-items-center">
-                        <div class="card-body">
-                            <h4 class="card-title">Expedita voluptas ut ut nesciunt</h4>
-                            <p>Aut est quidem doloremque voluptatem magnam quis excepturi vero quia. Eum eos doloremque
-                                architecto illo at beatae dolore. Fugiat suscipit et sint ratione dolores. Aut aliquid ea dolores
-                                libero nobis.</p>
-                        </div>
-                    </div>
-                </div>
-            </div> End Card Item -->
-        </div>
-    </div> 
-</section>
-<!-- ======= End Constructions Section ======= -->
-
 <!-- ======= Testimonials Section ======= -->
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
@@ -174,23 +102,23 @@
                 <div class="row">
                     <div class="col-lg-1"></div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt="">
+                        <a href='https://www.paladigm.capital/'><img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.cpgcorp.com.sg/'><img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://internationalcementgroup.com/'><img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.kustogroup.com/'><img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://amitysingapore.sg/'><img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
                     <div class="col-lg-1"></div>
                 </div>
@@ -209,19 +137,19 @@
             <div class="container" data-aos="zoom-in">
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.gov.kz/memleket/entities/mfa-singapore'><img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.sbf.org.sg/'><img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://invest.gov.kz/about-us/kazakh-invest/'><img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt="">
+                        <a href='https://aifc.kz/en'><img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt=""></a>
                     </div>
                 </div>
             </div>
