--- a/ksbc/templates/about/mission.html
+++ b/ksbc/templates/about/mission.html
@@ -53,7 +53,7 @@
 
 
 
-    <!-- ======= Testimonials Section ======= -->
+<!-- ======= Testimonials Section ======= -->
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
@@ -64,23 +64,23 @@
                 <div class="row">
                     <div class="col-lg-1"></div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt="">
+                        <a href='https://www.paladigm.capital/'><img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.cpgcorp.com.sg/'><img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://internationalcementgroup.com/'><img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.kustogroup.com/'><img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://amitysingapore.sg/'><img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
                     <div class="col-lg-1"></div>
                 </div>
@@ -99,19 +99,19 @@
             <div class="container" data-aos="zoom-in">
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.gov.kz/memleket/entities/mfa-singapore'><img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://www.sbf.org.sg/'><img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt="">
+                        <a href='https://invest.gov.kz/about-us/kazakh-invest/'><img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt=""></a>
                     </div>
             
                     <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt="">
+                        <a href='https://aifc.kz/en'><img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt=""></a>
                     </div>
                 </div>
             </div>
