--- a/ksbc/templates/about/what-we-do.html
+++ b/ksbc/templates/about/what-we-do.html
@@ -40,71 +40,70 @@
 </section>
 <!-- ======= End About Section ======= -->
 
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
-        <div class="container" data-aos="fade-up">
-            <div class="section-header">
-              <h2>Партнеры</h2>
-            </div>
-            <section id='clients' class="clients">
-                <div class="container" data-aos="zoom-in">
-                    <div class="row">
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                        <div class="col-lg-1"></div>
-                    </div>
-                </div>
-            </section>
+<!-- ======= Testimonials Section ======= -->
+<section id="testimonials" class="testimonials section-bg">
+    <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Партнеры</h2>
         </div>
-    </section><!-- End Testimonials Section -->
-    
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
-        <div class="container" data-aos="fade-up">
-            <div class="section-header">
-              <h2>Стратегические партнеры</h2>
-            </div>
-            <section id='clients' class="clients">
-                <div class="container" data-aos="zoom-in">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt="">
-                        </div>
-                
-                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                            <img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt="">
-                        </div>
+        <section id='clients' class="clients">
+            <div class="container" data-aos="zoom-in">
+                <div class="row">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://www.paladigm.capital/'><img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt=""></a>
                     </div>
+            
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://www.cpgcorp.com.sg/'><img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+            
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://internationalcementgroup.com/'><img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+            
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://www.kustogroup.com/'><img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+            
+                    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://amitysingapore.sg/'><img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+                    <div class="col-lg-1"></div>
                 </div>
-            </section>
-        </div>
-    </section><!-- End Testimonials Section -->
+            </div>
+        </section>
+    </div>
+</section><!-- End Testimonials Section -->
 
+<!-- ======= Testimonials Section ======= -->
+<section id="testimonials" class="testimonials section-bg">
+    <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Стратегические партнеры</h2>
+        </div>
+        <section id='clients' class="clients">
+            <div class="container" data-aos="zoom-in">
+                <div class="row">
+                    <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://www.gov.kz/memleket/entities/mfa-singapore'><img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+            
+                    <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://www.sbf.org.sg/'><img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+            
+                    <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://invest.gov.kz/about-us/kazakh-invest/'><img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt=""></a>
+                    </div>
+            
+                    <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                        <a href='https://aifc.kz/en'><img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</section><!-- End Testimonials Section -->
 
 {% endblock content %}
