--- a/ksbc/templates/includes/footer.html
+++ b/ksbc/templates/includes/footer.html
@@ -22,46 +22,41 @@
         </div><!-- End footer info column-->
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>О KSBC</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="{% url 'about:index' %}">Главная Страница</a></li>
+            <li><a href="{% url 'about:mission' %}">Миссия</a></li>
+            <li><a href="{% url 'about:vision' %}">Видение</a></li>
+            <li><a href="{% url 'about:word-of-chairman' %}">Слова Основателя</a></li>
+            <li><a href="{% url 'about:board-directors' %}">Совет Директоров</a></li>
           </ul>
         </div><!-- End footer links column-->
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Полезные ссылки</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="{% url 'about:what-we-do' %}">Наши Услуги</a></li>
+            <li><a href="{% url 'about:our-structure' %}">Наша Структура</a></li>
+            <li><a href="{% url 'membership:membership-list' %}">Членство</a></li>
+            <li><a href="https://www.flickr.com/photos/198811983@N02/">Фото галерея</a></li>
+            <li><a href="{% url 'about:contact-us' %}">Связаться с нами</a></li>
           </ul>
         </div><!-- End footer links column-->
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Новости и события</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="{% url 'news:news' %}">Новости</a></li>
+            <li><a href="{% url 'events:upcoming_events' %}">Предстоящие события</a></li>
+            <li><a href="{% url 'events:past_events' %}">Прошедшие события</a></li>
           </ul>
         </div><!-- End footer links column-->
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
+          <h4>Авторизация</h4>
           <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="{% url 'users:login' %}">Вход</a></li>
+            <li><a href="{% url 'users:signup' %}">Зарегистрироваться</a></li>
           </ul>
         </div><!-- End footer links column-->
 
