--- a/ksbc/templates/about/board-of-directors-person-3.html
+++ b/ksbc/templates/about/board-of-directors-person-3.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Эрик Ю Ту Лим - Совет Директоров{% endblock title %}
 {% block content %}
 
         <!-- ======= Breadcrumbs ======= -->
