--- a/ksbc/templates/about/board-of-directors-person-6.html
+++ b/ksbc/templates/about/board-of-directors-person-6.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Кенни Нг - Совет Директоров{% endblock title %}
 {% block content %}
 
         <!-- ======= Breadcrumbs ======= -->
