--- a/ksbc/templates/about/mission.html
+++ b/ksbc/templates/about/mission.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock title %}
+{% block title %}Миссия{% endblock title %}
 {% block content %}
 {% load static %}
     <!-- ======= Breadcrumbs ======= -->
