--- a/ksbc/templates/events/upcoming-events.html
+++ b/ksbc/templates/events/upcoming-events.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
-{% block title %}{% endblock title %}
+{% block title %}Предстоящие события{% endblock title %}
 {% block content %}
 {% load static %}
 <!-- ======= Breadcrumbs ======= -->
