--- a/ksbc/templates/includes/header.html
+++ b/ksbc/templates/includes/header.html
@@ -41,7 +41,7 @@
       </li>
 
       <li>
-          <a href="{% url 'membership:membership-list' %}">Членство</a>
+          <a href="{% url 'membership:membership-list' %}">Резидентсво</a>
       </li>
 
       <li>
