--- a/ksbc/templates/membership/payment_successful.html
+++ b/ksbc/templates/membership/payment_successful.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Оплата прошла успешно{% endblock title %}
 {% block content %}
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
@@ -19,7 +19,7 @@
                 <article class="blog-details">
                     <h2 class="title">Оплата прошла успешно!
                     </h2><br><br>
-                    <p>Теперь вы официально член организации!</p>
+                    <p>Теперь вы официально резидент организации!</p>
                     <i class="bi bi-check-circle-fill"></i>
                 </article><!-- End blog post -->
             </div>
