--- a/ksbc/templates/about/board-of-directors-person-5.html
+++ b/ksbc/templates/about/board-of-directors-person-5.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Шон Со Чун Чонг - Совет Директоров{% endblock title %}
 {% block content %}
         <!-- ======= Breadcrumbs ======= -->
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
