--- a/ksbc/templates/about/contact-us.html
+++ b/ksbc/templates/about/contact-us.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock title %}
+{% block title %}Связаться с нами{% endblock title %}
 {% block content %}
 {% load static %}
 <!-- ======= Breadcrumbs ======= -->
