--- a/ksbc/templates/about/word_of_chairman.html
+++ b/ksbc/templates/about/word_of_chairman.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock title %}
+{% block title %}Слова Основателя{% endblock title %}
 {% block content %}
 {% load static %}
     <!-- ======= Breadcrumbs ======= -->
