--- a/ksbc/templates/membership/membership_list.html
+++ b/ksbc/templates/membership/membership_list.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Резиденство{% endblock title %}
 {% block content %}
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Членство</h2>
+            <h2>Резиденство</h2>
             <ol>
             <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-            <li>Членство</li>
+            <li>Резиденство</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
@@ -17,7 +17,7 @@
     <div id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
             <div class="section-header">
-                <h2>Выберите тип членства</h2>
+                <h2>Выберите тип резиденства</h2>
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
                                         </div>
                                     {% else %}
                                         <div class="btn-wrap">
-                                            <span>Это ваше текущее членство</span>
+                                            <span>Это ваше текущее резиденство</span>
                                         </div>
                                     {% endif %}
                                     <input type='hidden' name='membership_type' value='{{ object.membership_type }}'>
