--- a/ksbc/templates/news/news_details.html
+++ b/ksbc/templates/news/news_details.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock title %}
+{% block title %}{{ news.title }}{% endblock title %}
 {% load static %}
 {% load thumbnail %}
 {% block content %}
@@ -33,14 +33,16 @@
 
                     <div class="meta-top">
                         <ul>
-                            <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a
-                                    href="blog-details.html"><time datetime="2020-01-01">{{news.pub_date|date:'M d, Y'}}</time></a>
+                            <li class="d-flex align-items-center"><i class="bi bi-clock"></i>
+                                <time datetime="2020-01-01">{{news.pub_date|date:'M d, Y'}}</time>
                             </li>
                         </ul>
                     </div><!-- End meta top -->
 
                     <div class="content">
-                        <p>{{ news.text }}</p>
+                        <div class='indented-text'>
+                            <p>{{ news.text }}</p>
+                        </div>
                     </div><!-- End post content -->
                 </article><!-- End blog post -->
             </div>
