--- a/ksbc/templates/news/news_list.html
+++ b/ksbc/templates/news/news_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
-{% block title %}{% endblock title %}
+{% block title %}Новость{% endblock title %}
 {% block content %}
 {% load static %}
 <!-- ======= Breadcrumbs ======= -->
