--- a/ksbc/templates/users/password_reset_confirm.html
+++ b/ksbc/templates/users/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock title %}
+{% block title %}Введите новый пароль{% endblock title %}
 {% block content %}
 {% load user_filters %}
 <!-- ======= Breadcrumbs ======= -->
